--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <div class="daohang">
             <nav class="active" id="nav">
                 <ul>
-                    <li><a href="../Home/index.html">Home</a></li>
-                    <li><a href="../Article/Scenery.html" target="_blank">Scenery</a></li>
-                    <li><a href="../Community/community.html" target="_blank">Community</a></li>
-                    <li><a href="../Contact/Contact.html" target="_blank">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="Scenery.html" target="_blank">Scenery</a></li>
+                    <li><a href="community.html" target="_blank">Community</a></li>
+                    <li><a href="Contact.html" target="_blank">Contact</a></li>
                 </ul>
                 <button class="icon" id="toggle">
                     <div class="line line1"></div>
@@ -39,19 +39,19 @@
             <div id="tableRow">
                 <!-- 图片展示窗口 -->
                 <div class="panel-box">
-                    <div class="panel active" style="background-image:url('../image/Zhangjiajie.jpg')">
+                    <div class="panel active" style="background-image:url('Image/Zhangjiajie.jpg')">
                         <h3>Zhangjiajie, China</h3>
                     </div>
-                    <div class="panel" style="background-image:url('../Image/Iceland.jpg')">
+                    <div class="panel" style="background-image:url('Image/Iceland.jpg')">
                         <h3>Iceland Aurora</h3>
                     </div>
-                    <div class="panel" style="background-image: url('../Image/AntelopeCanyon-3.jpg');">
+                    <div class="panel" style="background-image: url('Image/AntelopeCanyon-3.jpg');">
                         <h3>Antelope Canyon</h3>
                     </div>
-                    <div class="panel" style="background-image: url('../Image/LakeBaikal-2.jpg');">
+                    <div class="panel" style="background-image: url('Image/LakeBaikal-2.jpg');">
                         <h3>Lake Baikal</h3>
                     </div>
-                    <div class="panel" style="background-image: url('../Image/Danxialandform.jpg');">
+                    <div class="panel" style="background-image: url('Image/Danxialandform.jpg');">
                         <h3>Danxia Landform of Zhangye</h3>
                     </div>
                 </div>
@@ -106,7 +106,7 @@
                 </tr>  
             </table>
                    
-            <img src="../Image/头像.jpg" alt="个人照片" width="15%" height="15%">
+            <img src="Image/头像.jpg" alt="个人照片" width="15%" height="15%">
 
             <div id="self">
                 <p>
