--- a/Scenery.html
+++ b/Scenery.html
@@ -43,10 +43,10 @@
           <div class="phototable">
             <div class="photorow">
               <div class="landscape">
-                <img src="../Image/张家界2.jpg" alt="张家界地貌"/>
+                <img src="Image/张家界2.jpg" alt="张家界地貌"/>
               </div>
               <div class="portrait">
-                <img src="../Image/张家界3.jpg" alt="张家界地貌">
+                <img src="Image/张家界3.jpg" alt="张家界地貌">
               </div>
 
             </div>
@@ -64,10 +64,10 @@
           <div class="phototable">
             <div class="photorow">
               <div class="landscape">
-                <img src="../Image/冰岛4.jpg" alt="冰岛极光" />
+                <img src="Image/冰岛4.jpg" alt="冰岛极光" />
               </div>
               <div class="portrait">
-                <img src="../Image/冰岛2.jpg" alt="冰岛极光">
+                <img src="Image/冰岛2.jpg" alt="冰岛极光">
               </div>
 
             </div> 
@@ -81,9 +81,9 @@
   <!-- 侧边导航栏的设计 -->
   <nav>
     <ul>
-      <li><i class="fas fa-home"></i><a href="../Home/index.html" target="_blank"> Home</a></li>
-      <li><i class="fas fa-user-alt"></i><a href="../Community/community.html" target="_blank"> Community </a></li>
-      <li><i class="fas fa-envelope"></i><a href="../Contact/Contact.html" target="_blank"> Contact</a></li>
+      <li><i class="fas fa-home"></i><a href="index.html" target="_blank"> Home</a></li>
+      <li><i class="fas fa-user-alt"></i><a href="community.html" target="_blank"> Community </a></li>
+      <li><i class="fas fa-envelope"></i><a href="Contact.html" target="_blank"> Contact</a></li>
     </ul>
   </nav>
 
