--- a/community.html
+++ b/community.html
@@ -13,10 +13,10 @@
             <div class="daohang">
                 <nav class="active" id="nav">
                     <ul>
-                        <li><a href="../Home/index.html" target="_blank">Home</a></li>
-                        <li><a href="../Article/Scenery.html" target="_blank">Scenery</a></li>
-                        <li><a href="../Community/community.html">Community</a></li>
-                        <li><a href="../Contact/Contact.html" target="_blank">Contact</a></li>
+                        <li><a href="index.html" target="_blank">Home</a></li>
+                        <li><a href="Scenery.html" target="_blank">Scenery</a></li>
+                        <li><a href="community.html">Community</a></li>
+                        <li><a href="Contact.html" target="_blank">Contact</a></li>
                     </ul>
                     <button class="icon" id="toggle">
                         <div class="line line1"></div>
@@ -32,7 +32,7 @@
                 <!-- 右侧悬浮栏 -->
                 <div id="display">
                     <div id="user">
-                        <img src="../Image/哆啦A梦.jpeg" alt="用户头像" width="20%" height="20%">
+                        <img src="Image/哆啦A梦.jpeg" alt="用户头像" width="20%" height="20%">
                         <h3>Aloha71</h3>
 
                         <p>QQ: 2663100974</p>
@@ -47,7 +47,7 @@
                         <table id="part">
                             <tr>
                                 <td>
-                                    <img src="../Image/旅游.JPG" alt="美景" width="60%" height="60%">
+                                    <img src="Image/旅游.JPG" alt="美景" width="60%" height="60%">
                                 </td>
                                 <td>
                                     <p>山山而川，征途漫漫。<br>
@@ -74,7 +74,7 @@
                         <table id="part">
                             <tr>
                                 <td>
-                                    <img src="../Image/王者荣耀.jpg" alt="美景" width="80%" height="80%">
+                                    <img src="Image/王者荣耀.jpg" alt="美景" width="80%" height="80%">
                                 </td>
                                 <td>
                                     <p>百里守约，是腾讯手游《王者荣耀》的一位射手型英雄角色，2017年8月8日在游戏登场。<br>
