--- a/Contact.html
+++ b/Contact.html
@@ -12,10 +12,10 @@
         <div class="daohang">
             <nav class="active" id="nav">
                 <ul>
-                    <li><a href="../Home/index.html" target="_blank">Home</a></li>
-                    <li><a href="../Article/Scenery.html" target="_blank">Scenery</a></li>
-                    <li><a href="../Community/community.html" target="_blank">Community</a></li>
-                    <li><a href="../Contact/Contact.html">Contact</a></li>
+                    <li><a href="index.html" target="_blank">Home</a></li>
+                    <li><a href="Scenery.html" target="_blank">Scenery</a></li>
+                    <li><a href="community.html" target="_blank">Community</a></li>
+                    <li><a href="Contact.html">Contact</a></li>
                 </ul>
                 <button class="icon" id="toggle">
                     <div class="line line1"></div>
@@ -42,8 +42,8 @@
                 <tr>
                     <td>性别:</td>
                     <td>
-                        <input type="radio" name="sex" id="nan"> <label for="nan"> <img src="../image/man.jpg" > 男 </label>  
-                        <input type="radio" name="sex" id="nv"> <label for="nv"><img src="../image/women.jpg" > 女</label> 
+                        <input type="radio" name="sex" id="nan"> <label for="nan"> <img src="Image/man.jpg" > 男 </label>  
+                        <input type="radio" name="sex" id="nv"> <label for="nv"><img src="Image/women.jpg" > 女</label> 
                     </td>
                 </tr>
                 <!-- 第三行 -->
