--- a/community.html
+++ b/community.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Communityt/community.css">
+    <link rel="stylesheet" href="Community/community.css">
     <title>Communityt</title>
 </head>
 <body>
