--- a/Contact.html
+++ b/Contact.html
@@ -30,7 +30,7 @@
 
         <div id="contact">
             <!-- 表单设计 -->
-            <img src="../Image/contact.jpg" alt="">
+            <img src="Image/contact.jpg" alt="">
             <table id="Biaoge" width="600" Cellpadding="3px">
                 <caption></caption>
                 <!-- 第一行 -->
